--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^5.5.1",
     "react": "16.0.0-beta.5",
     "react-native": "0.49.3",
+    "react-native-aws-cognito-js": "0.0.7",
     "react-native-push-notification": "^3.0.1"
   },
   "devDependencies": {
